--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,46 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+body {
+  @apply font-roboto;
+}
+
+.side-bar::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
+.side-bar:hover::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+.side-bar::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 5px;
+}
+
+.side-bar::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+
+.side-bar:hover::-webkit-scrollbar-thumb {
+  background: #d6d6d6;
+}
+
+/* .side-bar {
+  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+  transform: translateX(-100%);
+  opacity: 0;
+}
+.side-bar.visible {
+  transform: translateX(0);
+  opacity: 1;
+} */
 /* .App {
   text-align: center;
 }
