--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ body {
   background: #d6d6d6;
 }
 
-.video-container::-webkit-scrollbar {
+.hide-scrollbar::-webkit-scrollbar {
   display: none;
 }
 /* .side-bar {
