--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,18 @@
 
 body {
   @apply font-roboto;
+  @apply min-h-screen;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.container-snap::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.container-snap {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 .side-bar::-webkit-scrollbar {
